--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,13 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
+    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
+    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -87,16 +91,11 @@ body {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  @apply bg-slate-900;
 }
 
 a {
-  color: inherit;
+  @apply border-b border-b-cyan-400 text-white hover:border-b-2 mb-[1px] hover:mb-0;
   text-decoration: none;
 }
 
@@ -104,4 +103,36 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+#__next {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  width: 100%;
+}
+
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+}
+h2 {
+  font-size: 3rem;
+  line-height: 1.1;
+}
+h3 {
+  font-size: 2.25rem;
+  line-height: 1.1;
+}
+h4 {
+  font-size: 1.875rem;
+  line-height: 1.1;
+}
+h5 {
+  font-size: 1.25rem;
+  line-height: 1.1;
+}
+
+p {
+  @apply text-slate-400;
 }
